[package]
name = "hacker-news-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.12.0", features = ["full"] }
